--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "jest-dom": "^3.1.3",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-scripts": "^2.1.8",
-    "react-testing-library": "^6.0.0"
+    "@emotion/core": "^10.0.0",
+    "@emotion/styled": "^10.0.0",
+    "emotion": "^10.0.0",
+    "jest-dom": "^2.0.3",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
+    "react-emotion": "^9.2.12",
+    "react-scripts": "^2.1.1",
+    "react-testing-library": "^5.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
